--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,7 @@ author: IUCS Öğrencileri
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Hakkımızda: "aboutme"
 
 ################
 # --- Logo --- #
